--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -63,51 +63,63 @@
             </section>
     <section id="flora-cards" class="css-grid-global">
                     <div>
-                    <ul id="flora-cards">
-                        <li>
-                            <section class="card-grid-global">
-                                <div>
-                            <h1>FLOWERS</h1>
-                            <img class="flora-card-img" src="img/about-us-1.jpg" alt="flowers">
-                            <p>We love to surround ourselves with flowers and other exquisite 
-                                bits of the natural world, and want to do the same for our clients. 
-                                Flowers often say what words cannot, and this is what we’re always 
-                                after: sharing a feeling and capturing everything we can’t put into 
-                                words.</p>
-                                <section class="flora-card-button">
-                                    <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                        <ul id="flora-cards">
+                            <li>
+                                <section class="card-grid-global">
+                                    <div>
+                                        <h1>FLOWERS</h1>
+                                        <section class="flora-card-content">
+                                            <section class="flora-card-left">
+                                                <img class="flora-card-img" src="img/about-us-1.jpg" alt="flowers">
+                                            </section>
+                                            <section class="flora-card-right">
+                                                <p>We love to surround ourselves with flowers and other exquisite
+                                                    bits of the natural world, and want to do the same for our clients.
+                                                    Flowers often say what words cannot, and this is what we're always
+                                                    after: sharing a feeling and capturing everything we can't put into
+                                                    words.</p>
+                                                <section class="flora-card-button">
+                                                    <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                                                </section>
+                                            </section>
+                                        </section>
+                                    </div>
                                 </section>
-                        </div>
-                    </section>
-                        </li>
-                        <li>
-                            <section class="card-grid-global">
-                                <div>
-                            <h1>PLANTS</h1>
-                            <img class="flora-card-img" src="img/plants.jpg" alt="plants">
-                            <p>Whether you’ re after something seasonal for the patio, an elegantly 
-                                planted gift, or the perfect arrangement that will live on even after 
-                                a party, Vault + Vine has you covered. Find the perfect plants for 
-                                inside, outside, and anywhere in between. From heat loving succulents
-                                 to houseplants that we promise are almost impossible to kill, we’ ll 
-                                 help find the plants for you. We provide creative expertise and unique
-                                  plants tailored to your space, event, and personality.</p>
-                                  <section class="flora-card-button">
-                                    <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                            </li>
+                            <li>
+                                <section class="card-grid-global">
+                                    <div>
+                                        <h1>PLANTS</h1>
+                                        <section class="flora-card-content">
+                                            <section class="flora-card-left">
+                                                <img class="flora-card-img" src="img/plants.jpg" alt="plants">
+                                            </section>
+                                            <section class="flora-card-right">
+                                                <p>Whether you're after something seasonal for the patio, an elegantly
+                                                    planted gift, or the perfect arrangement that will live on even after
+                                                    a party, Vault + Vine has you covered. Find the perfect plants for
+                                                    inside, outside, and anywhere in between. From heat loving succulents
+                                                    to houseplants that we promise are almost impossible to kill, we'll
+                                                    help find the plants for you. We provide creative expertise and unique
+                                                    plants tailored to your space, event, and personality.</p>
+                                                <section class="flora-card-button">
+                                                    <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                                                </section>
+                                            </section>
+                                        </section>
+                                    </div>
                                 </section>
-                        </div>
-                    </section>
-                        </li>
-                    </ul>
-                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
-    <section>
+    <section class="css-grid-global">
                         <div>
-                            <section>
+                            <section id="search-text">
                                 <p>Want your arrangment 
                                     delivered? Check and see if we deliver to your zipcode.</p>
                             </section>
-                            <section>
+                            <section id="search-bar">
                                 <form action="#">
                                     <input type="text">
                                     <button>Search</button>
@@ -115,10 +127,11 @@
                             </section>
                         </div>
                     </section>
-    <section id="flora-shop" class="css-grid-global">
+    <section id="flora-shop">
                         <div>
                         <section>
-                            <section id="flora-shop-content">
+                            <section class="css-grid-global" id="flora-shop-content">
+                                <div>
                                 <p>
                                     Not a plant person? We've got you covered. 
                                     From locally sourced coffee and tea to handmade candles, 
@@ -127,6 +140,7 @@
                                 <section id="flora-shop-link">
                                 <a href="#">Check out our shop here<img src="img/arrow-right.svg" alt="arrow"></a>
                             </section>
+                        </div>
                             </section>
                         <aside class="show-for-md"><img src="img/flora-shop.jpg" alt="shop"></aside>
                         </section>
