--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -114,7 +114,7 @@
                     </div>
                 </section>
     <section class="css-grid-global">
-                        <div>
+                        <div id="search">
                             <section id="search-text">
                                 <p>Want your arrangment 
                                     delivered? Check and see if we deliver to your zipcode.</p>
