time to fix nav

--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -26,21 +26,7 @@
                         <i class="fa-solid fa-bars"></i>
                     </button>
                 </aside>
-                    <nav id="main-menu" class>
-                        <aside class="hide-for-lg">
-                           <button id="close-btn">
-                              <i class="fa-solid fa-xmark-large"></i>
-                           </button>
-                        </aside>
-                        <section>
-                           <ul>
-                              <li><a href="#">OUR STORY</a></li>
-                              <li><a href="#">SHOP</a></li>
-                              <li><a href="flora.html">FLORA</a></li>
-                              <li><a href="#">CAFÉ</a></li>
-                           </ul>
-                        </section>
-                     </nav>
+                    
                 
             </div>
         </header>
@@ -127,24 +113,28 @@
                             </section>
                         </div>
                     </section>
-    <section id="flora-shop">
-                        <div>
-                        <section>
-                            <section class="css-grid-global" id="flora-shop-content">
-                                <div>
-                                <p>
-                                    Not a plant person? We've got you covered. 
-                                    From locally sourced coffee and tea to handmade candles, 
-                                    Vault + Vine has a product for everyone. 
-                                </p>
-                                <section id="flora-shop-link">
-                                <a href="#">Check out our shop here<img src="img/arrow-right.svg" alt="arrow"></a>
-                            </section>
-                        </div>
-                            </section>
-                        <aside class="show-for-md"><img src="img/flora-shop.jpg" alt="shop"></aside>
-                        </section>
-                        </div>
+    <section>
+                            <div>
+                                <section id="flora-shop">
+                                    <section id="flora-shop-content">
+                                    <section class="css-grid-global">
+                                        <div>
+                                            <p>
+                                                Not a plant person? We've got you covered.
+                                                From locally sourced coffee and tea to handmade candles,
+                                                Vault + Vine has a product for everyone.
+                                            </p>
+                                            <section id="flora-shop-link">
+                                                <a href="#">Check out our shop here<img src="img/arrow-right.svg" alt="arrow"></a>
+                                            </section>
+                                        </div>
+                                    </section>
+                                </section>
+                                    <section id="flora-shop-img">
+                                    <aside class="show-for-md"><img src="img/flora-shop.jpg" alt="shop"></aside>
+                                </section>
+                                </section>
+                            </div>
                         </section>
     <footer class="css-grid-global">
                                 <div>
