nav wont work still

--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -26,7 +26,21 @@
                         <i class="fa-solid fa-bars"></i>
                     </button>
                 </aside>
-                    
+                         <nav id="main-menu" class>
+                             <aside class="hide-for-lg">
+                                <button id="close-btn">
+                                   <i class="fa-solid fa-xmark-large"></i>
+                                </button>
+                             </aside>
+                             <section>
+                                <ul>
+                                   <li><a href="#">OUR STORY</a></li>
+                                   <li><a href="#">SHOP</a></li>
+                                   <li><a href="flora.html">FLORA</a></li>
+                                   <li><a href="#">CAFÉ</a></li>
+                                </ul>
+                             </section>
+                          </nav>   
                 
             </div>
         </header>
@@ -49,7 +63,7 @@
             </section>
     <section id="flora-cards" class="css-grid-global">
                     <div>
-                        <ul id="flora-cards">
+                        <ul id="flora-cards-list">
                             <li>
                                 <section class="card-grid-global">
                                     <div>
