--- a/deploy/index.html
+++ b/deploy/index.html
@@ -122,7 +122,7 @@
                                     <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
                                         Come in and browse our selection or order your arrangement online.</p>
                                     <section class="home-card-button right-side-button">
-                                        <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                                        <a href="flora.html"><img src="img/round-button.svg" alt="arrow"></a>
                                     </section>
                                 </section>
                             </section>
